# backend/docs/swagger.json
@@ -174,6 +174,113 @@
                 }
             }
         },
+        "/api/intern/users/events": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Получение списка мероприятий, на которые записался текущий пользователь",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "intern"
+                ],
+                "summary": "Получить мероприятия пользователя",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/intern.UserEventGetInfo"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Создание связи между пользователем и мероприятием",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "intern"
+                ],
+                "summary": "Записаться на мероприятие",
+                "parameters": [
+                    {
+                        "description": "Event data",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/intern.UserEventCreateInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "409": {
+                        "description": "Conflict",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/manager/events": {
             "get": {
                 "security": [
@@ -1042,6 +1149,31 @@
                 }
             }
         },
+        "intern.UserEventCreateInfo": {
+            "type": "object",
+            "properties": {
+                "application_id": {
+                    "type": "integer"
+                },
+                "event_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "intern.UserEventGetInfo": {
+            "type": "object",
+            "properties": {
+                "application_id": {
+                    "type": "integer"
+                },
+                "event_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "manager.CreateQuestionInfo": {
             "type": "object",
             "properties": {
@@ -1127,7 +1259,7 @@
                     "type": "integer"
                 },
                 "threshold": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "time_limit": {
                     "type": "integer"
@@ -1155,10 +1287,10 @@
                     "type": "integer"
                 },
                 "test_threshold": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "threshold": {
-                    "type": "number"
+                    "type": "integer"
                 }
             }
         },
@@ -1271,7 +1403,7 @@
                     }
                 },
                 "score": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "test_title": {
                     "type": "string"
@@ -1306,7 +1438,7 @@
                     }
                 },
                 "score": {
-                    "type": "number"
+                    "type": "integer"
                 },
                 "time_spent_minutes": {
                     "type": "integer"
